<resources>
    <string name="app_name">ColorMyViews1</string>
    <string name="box_one">Box One</string>
    <string name="box_two">Box Two</string>
    <string name="box_three">Box Three</string>
    <string name="box_four">Box Four</string>
    <string name="box_five">Box Five</string>
    <string name="box_six">Box Six</string>
    <string name="box_seven">Box Seven</string>
    <string name="box_eight">Box Eight</string>
    <string name="box_nine">Box Nine</string>
    <string name="box_ten">Box Ten</string>
    <string name="how_to_play">How to play:</string>
    <string name="tap_the_boxes_and_buttons">Tap the screen and buttons.</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_10">10</string>
</resources>